@@ -3,7 +3,8 @@ Release 1.22 - ???
    * NOTE: Known regression: PDFBOX-4587 -- PDF passwords with codepoints
      between 0xF000 and 0XF0000 will cause an exception.
 
-   * Add parser for HWP v5 files via SooMyung Lee (soomyung) (TIKA-2909).
+   * Add parser for HWP v5 files via SooMyung Lee (soomyung) and
+     JinSup Kim (ddoleye) (TIKA-2909).
 
    * Fix order of closing streams to avoid "Failed to close temporary resource"
      exception (TIKA-2908).
